Fix package.json syntax errors

--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "react-dom": "^18.3.1",
     "react-zoom-pan-pinch": "^3.6.1",
     "sharp": "^0.33.5",
-    "stripe": "^17.2.1",
     "swr": "^2.2.5",
-    "z
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
