--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.645.0",
-    "@aws-sdk/s3-request-presigner": "^3.645.0",
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -38,6 +36,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@sentry/nextjs": "^8.33.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
