--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,26 @@
-# Database
-DATABASE_URL="postgresql://postgres:password@localhost:5432/timeless_luxury?schema=public"
+# ============================================
+# REQUIRED - These MUST be configured
+# ============================================
 
-# NextAuth
+# Database - Replace with your production database URL
+DATABASE_URL="postgresql://postgres:CHANGE_THIS_PASSWORD@localhost:5432/timeless_luxury?schema=public"
+
+# NextAuth - CRITICAL: Generate a secure random string (min 32 characters)
+# Generate with: openssl rand -base64 32
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="generate-a-secure-random-string-here-min-32-chars"
+NEXTAUTH_SECRET="GENERATE_WITH_openssl_rand_base64_32_MINIMUM_32_CHARS_REQUIRED"
+
+# ============================================
+# Docker Compose Variables (if using Docker)
+# ============================================
+
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="CHANGE_THIS_PASSWORD"
+POSTGRES_DB="timeless_luxury"
+
+# ============================================
+# OPTIONAL - Payment Processing
+# ============================================
 
 # Stripe
 STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
@@ -11,24 +28,36 @@ STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
 STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
 
-# AWS S3 (for image storage)
+# ============================================
+# OPTIONAL - Image Storage (Choose one)
+# ============================================
+
+# AWS S3
 AWS_ACCESS_KEY_ID="your-aws-access-key-id"
 AWS_SECRET_ACCESS_KEY="your-aws-secret-access-key"
 AWS_REGION="us-east-1"
 AWS_S3_BUCKET="timeless-luxury-images"
 
-# Alternative: Cloudinary (comment out S3 vars if using this)
+# OR Cloudinary (comment out S3 vars if using this)
 # CLOUDINARY_CLOUD_NAME="your-cloud-name"
 # CLOUDINARY_API_KEY="your-api-key"
 # CLOUDINARY_API_SECRET="your-api-secret"
 # NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="your-cloud-name"
 
-# Email (SMTP for verification emails)
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT="587"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASSWORD="your-app-password"
+# ============================================
+# OPTIONAL - Email Service
+# ============================================
+
+# SMTP for verification/notification emails
+EMAIL_SERVER_HOST="smtp.gmail.com"
+EMAIL_SERVER_PORT="587"
+EMAIL_SERVER_USER="your-email@gmail.com"
+EMAIL_SERVER_PASSWORD="your-app-password"
 EMAIL_FROM="noreply@timelessluxury.com"
+
+# ============================================
+# OPTIONAL - Monitoring & Analytics
+# ============================================
 
 # Sentry (Error Tracking)
 NEXT_PUBLIC_SENTRY_DSN="https://your-sentry-dsn@sentry.io/project-id"
@@ -37,14 +66,13 @@ SENTRY_AUTH_TOKEN="your-sentry-auth-token"
 # Google Analytics
 NEXT_PUBLIC_GA_ID="G-XXXXXXXXXX"
 
-# Application
+# ============================================
+# Application Settings
+# ============================================
+
 NODE_ENV="development"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-# Admin
+# Admin Account (Initial Setup Only)
 ADMIN_EMAIL="admin@timelessluxury.com"
-ADMIN_PASSWORD="changeme123"
-
-# Rate Limiting
-RATE_LIMIT_MAX="100"
-RATE_LIMIT_WINDOW_MS="900000"
+ADMIN_PASSWORD="CHANGE_THIS_IMMEDIATELY"
